fixed stickey navbar and added banner

--- a/index.html
+++ b/index.html
@@ -81,6 +81,71 @@
 
     <!-- HERO end -->
 
+    <!-- CATEGORY LIST start  -->
+
+    <h2 class="category__title">SHOP BY CATEGORY</h2>
+
+    <div class="category">
+
+        <div class="category__list">
+
+            <!-- BANNER 1 start  -->
+
+            <div class="category__banner">
+                <div class="category__banner-title">
+                    <h4>For Mobile</h4>
+                </div>
+                <div class="category__banner-img">
+                    <img src="./image/banner1.avif" alt="">
+                </div>
+            </div>
+
+            <!-- BANNER 1 end  -->
+
+            <!-- BANNER 2 start  -->
+
+            <div class="category__banner">
+                <div class="category__banner-title">
+                    <h4>For TWS</h4>
+                </div>
+                <div class="category__banner-img">
+                    <img src="./image/banner2.avif" alt="">
+                </div>
+            </div>
+
+            <!-- BANNER 2 end  -->
+
+            <!-- BANNER 3 start  -->
+
+            <div class="category__banner">
+                <div class="category__banner-title">
+                    <h4>For Watch</h4>
+                </div>
+                <div class="category__banner-img">
+                    <img src="./image/banner3.avif" alt="">
+                </div>
+            </div>
+
+            <!-- BANNER 3 end  -->
+
+            <!-- BANNER 4 start  -->
+
+            <div class="category__banner">
+                <div class="category__banner-title">
+                    <h4>For Camera</h4>
+                </div>
+                <div class="category__banner-img">
+                    <img src="./image/banner4.avif" alt="">
+                </div>
+            </div>
+
+            <!-- BANNER 4 end  -->
+
+        </div>
+    </div>
+
+    <!-- CATEGORY LIST end  -->
+
     <!-- FEATURE PRODUCT start -->
 
     <h2 class="feature-product__title">Featured Products</h2>
@@ -225,7 +290,7 @@
 
     <div class="review">
 
-        <!-- USER 1 start -->`
+        <!-- USER 1 start -->
 
         <div class="review__user-card">
 
@@ -257,7 +322,7 @@
 
         <!-- USER 1 end -->
 
-        <!-- USER 2 start -->`
+        <!-- USER 2 start -->
 
         <div class="review__user-card">
 
@@ -289,7 +354,7 @@
 
         <!-- USER 2 end -->
 
-        <!-- USER 3 start -->`
+        <!-- USER 3 start -->
 
         <div class="review__user-card">
 
@@ -321,7 +386,7 @@
 
         <!-- USER 3 end -->
 
-        <!-- USER 4 start -->`
+        <!-- USER 4 start -->
 
         <div class="review__user-card">
 
