added sale section

--- a/index.html
+++ b/index.html
@@ -146,9 +146,46 @@
 
     <!-- CATEGORY LIST end  -->
 
+    <!-- SALE PRODUCTS start  -->
+
+    <h2 class="sale-product__title"><span>SALE</span> STORE</h2>
+
+    <div class="sale-product">
+        <div class="sale-product__main-container">
+
+            <div class="sale-product__container1">
+                <img src="./image/sale-banner1.avif" alt="">
+                <div class="sale-product__container1-overlay">
+                    <p>Up To <span>40% OFF</span></p>
+                    <button>SHOP NOW</button>
+                </div>
+            </div>
+            <div class="sale-product__container2">
+                <div class="sale-product__sub-container1">
+                    <img src="./image/sale-banner2.avif" alt="">
+                    <div class="sale-product__sub-container1-overlay">
+                        <p>Up To <span>40% OFF</span></p>
+                        <button>SHOP NOW</button>
+                    </div>
+                </div>
+                <div class="sale-product__sub-container2">
+                    <img src="./image/sale-banner3.avif" alt="">
+                    <div class="sale-product__sub-container2-overlay">
+                        <p>Up To <span>40% OFF</span></p>
+                        <button>SHOP NOW</button>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+
+    <!-- SALE PRODUCTS end  -->
+
     <!-- FEATURE PRODUCT start -->
 
-    <h2 class="feature-product__title">Featured Products</h2>
+    <h2 class="feature-product__title">FEATURED PRODUCTS</h2>
 
     <div class="feature-product">
 
