added filter modal and cards on listing page

--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
     <h2 class="sale-product__title"><span>SALE</span> STORE</h2>
 
     <div class="sale-product">
+
         <div class="sale-product__main-container">
 
             <div class="sale-product__container1">
@@ -179,7 +180,7 @@
 
         </div>
     </div>
-
+    </div>
 
     <!-- SALE PRODUCTS end  -->
 
