--- a/listing.html
+++ b/listing.html
@@ -53,9 +53,9 @@
                 <input type="search" placeholder="search here">
             </div>
             <div class="navigation__icon">
-                <i class="fa-regular fa-heart"></i>
-                <i class="fa-regular fa-user"></i>
-                <i class="fa-solid fa-cart-shopping"></i>
+                <a href=""><i class="fa-regular fa-heart"></i></a>
+                <a href=""><i class="fa-regular fa-user"></i></a>
+                <a href="/cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
             </div>
         </nav>
     </div>
